[develop] asset management, new styles and layout

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,13 +1,21 @@
 
 // Fonts
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans:300,300i,400,400i,500,500i,600,600i');
 
+body {
+    font-family: 'Fira Sans', sans-serif !important;
+    font-weight: 400;
+}
+
+;
 // Variables
 @import "variables";
+@import "brand";
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+@import "scaffolding";
 @import "navbar";
 @import "forms";
 @import "footer";
