--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,13 +1,3 @@
-
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans:300,300i,400,400i,500,500i,600,600i');
-
-body {
-    font-family: 'Fira Sans', sans-serif !important;
-    font-weight: 400;
-}
-
-;
 // Variables
 @import "variables";
 @import "brand";
@@ -20,3 +10,6 @@ body {
 @import "tile";
 @import "forms";
 @import "footer";
+
+// Modules
+@import "user-activity";
