--- a/resources/assets/sass/tile.scss
+++ b/resources/assets/sass/tile.scss
@@ -3,21 +3,21 @@ $tileHeading: (
 );
 
 $tileBody: (
-    'padding': 20
+    'padding': 15
 );
 
 .Tile {
     margin-bottom: 20px;
-    border-radius: $borderRadiusDefault + px;
+    border-radius: $borderRadius + px;
 
     background-color: $tileBgColor;
     box-shadow: 0 1px 2px 0 rgba(45, 49, 66, 0.25);
-}
 
-.Tile_heading {
-    padding: map_get($tileHeading, padding) + px;
-}
+    &__heading {
+        padding: map_get($tileHeading, padding) + px;
+    }
 
-.Tile_body {
-    padding: map_get($tileBody, padding) + px;
+    &__body {
+        padding: map_get($tileBody, padding) + px;
+    }
 }
