--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,10 @@
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+//Font awesome
+@import "node_modules/font-awesome/scss/font-awesome";
+$fa-font-path : "node_modules/font-awesome/fonts" !default;
+
 @import "scaffolding";
 @import "navbar";
 @import "tile";
