[develop] online users module

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -17,3 +17,6 @@ $fa-font-path : "node_modules/font-awesome/fonts" !default;
 // Components
 @import "components/tile";
 @import "components/user-activity";
+
+//Modules
+@import "modules/online-users";
