--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -20,3 +20,4 @@ $fa-font-path : "node_modules/font-awesome/fonts" !default;
 
 //Modules
 @import "modules/online-users";
+@import "modules/user-account";
