--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -1,21 +1,35 @@
 // colors
 $slate: #4f5d75;
+$dark: #2d3142;
 $tomato: #ef4f2b;
+$salmon: #f3a69e;
 $sugar: #e6e6e6;
 $earlGrey: #f3f3f3;
 $white: #fff;
 $black: #333;
+$light-teal: #b6e9df;
+$topaz: #1abc9c;
+$sky-blue: #9acced;
+$dark-sky-blue: #3498db;
+$squash: #f39c12;
+$squash-light: #f9ce89;
 
 // brand colors
 $mainColor: $slate;
 $secondaryColor: $tomato;
 $textColor: $black;
 
-// layout items
-$navbarLinkColor: $sugar;
-$tileBgColor: $white;
+// layout colors
 $bodyBgColor: $earlGrey;
 $borderColor: $bodyBgColor;
+
+$roundImageDimensions: (
+    'xs': 20,
+    'sm': 40,
+    'md': 80,
+    'lg': 150,
+    'xl': 250,
+);
 
 // layout tweaks
 $borderRadius: 2;
@@ -28,8 +42,18 @@ $fontSize: (
 );
 
 // ---------------- Components & Modules ---------------
+// Navbar
+$navbarLinkColor: $sugar;
+$navbarBgColor: $slate;
+
+$navbarHeight: 100;
+$navbarBorderWidth: 1;
+$navbarLineHeight: 22;
+
+$logoHeight: round($navbarHeight * 0.55);
 
 // Tile
+$tileBgColor: $white;
 $tileHeading: (
     'padding': 15,
     'fontSize': 14,
@@ -47,6 +71,11 @@ $userActivityHeading: (
     'textAlign': left
 );
 
+$userActivityProfileImage: (
+    'width': map_get($roundImageDimensions, sm),
+    'height': map_get($roundImageDimensions, sm)
+);
+
 // Online-users
 $onlineUsersItem: (
     'textAlign': left,
@@ -56,4 +85,55 @@ $onlineUsersItem: (
 
 $onlineUsersProfileImage: (
     'marginRight': 5
-)
+);
+
+// User-account
+$userAccountProfileImage: (
+    'width': map_get($roundImageDimensions, sm),
+    'height': map_get($roundImageDimensions, sm),
+    'border-radius': 50%,
+    'padding-top': 10
+);
+
+$userAccountUsername: (
+    'fontSize': 14,
+    'fontColor': $mainColor,
+    'padding-top': 10,
+    'padding-bottom': 10
+);
+
+// Footer
+$footerBgColor: $dark;
+$footerLogo: (
+    'height': $logoHeight + px
+);
+
+// Alerts
+$alertSuccess: (
+    'bgColor': $light-teal,
+    'fontColor': $topaz,
+    'borderColor': $topaz,
+    'dismissColor': $topaz
+);
+
+$alertInfo: (
+    'bgColor': $sky-blue,
+    'fontColor': $dark-sky-blue,
+    'borderColor': $dark-sky-blue,
+    'dismissColor': $dark-sky-blue
+);
+
+$alertWarning: (
+    'bgColor': $squash-light,
+    'fontColor': $squash,
+    'borderColor': $squash,
+    'dismissColor': $squash
+);
+
+$alertDanger: (
+    'bgColor': $salmon,
+    'fontColor': $tomato,
+    'borderColor': $tomato,
+    'dismissColor': $tomato
+);
+
