--- a/resources/assets/sass/navbar.scss
+++ b/resources/assets/sass/navbar.scss
@@ -1,13 +1,6 @@
-// Setup of Navbar
-$navbarHeight: 100;
-$navbarBorderWidth: 1;
-$navbarLineHeight: 22;
-
-$logoHeight: round($navbarHeight * 0.55);
-
 .navbar-default {
     border: $navbarBorderWidth + px solid #d3e0e9;
-    background-color: $mainColor;
+    background-color: $navbarBgColor;
 
     .navbar-nav {
         > li {
@@ -23,6 +16,33 @@ $logoHeight: round($navbarHeight * 0.55);
                     color: darken($navbarLinkColor, 15%);
                     cursor: pointer;
                 }
+
+                &:focus {
+                    background-color: transparent;
+                    color: $sugar;
+                }
+            }
+        }
+
+        > .active {
+            > a {
+                background-color: transparent;
+                color: $white;
+                font-weight: 500;
+            }
+
+            &:hover {
+                > a {
+                    background-color: transparent;
+                    color: $sugar;
+                }
+            }
+
+            &:focus {
+                > a {
+                    background-color: transparent;
+                    color: $sugar;
+                }
             }
         }
     }
@@ -36,5 +56,43 @@ $logoHeight: round($navbarHeight * 0.55);
 
     > img {
         height: $logoHeight + px;
+    }
+}
+
+// change navbar collapse breakpoint
+@media (max-width: $screen-sm-max) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left, .navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none !important;
+    }
+    .navbar-nav {
+        float: none !important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav > li {
+        float: none;
+    }
+    .navbar-nav > li > a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in {
+        display: block !important;
     }
 }
