--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -22,3 +22,4 @@ $fa-font-path : "node_modules/font-awesome/fonts" !default;
 //Modules
 @import "modules/online-users";
 @import "modules/user-account";
+@import "modules/shoutbox";
