--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -31,8 +31,8 @@ $bodyBgColor: $earlGrey;
 $borderColor: $bodyBgColor;
 
 $roundImageDimensions: (
-    'xs': 20,
-    'sm': 40,
+    'xs': 30,
+    'sm': 40, // this is not to be changed
     'md': 80,
     'lg': 150,
     'xl': 250,
@@ -88,10 +88,6 @@ $onlineUsersItem: (
     'textAlign': left,
     'fontSize': 12,
     'marginBottom': 10,
-);
-
-$onlineUsersProfileImage: (
-    'marginRight': 5
 );
 
 // User-account
