--- a/resources/assets/sass/modules/shoutbox.scss
+++ b/resources/assets/sass/modules/shoutbox.scss
@@ -1,4 +1,7 @@
-.Online-users {
+.Shoutbox {
+    position: relative;
+    height: 600px;
+
     &__item {
         display: -webkit-flex;
         display: flex;
@@ -6,8 +9,8 @@
         flex-direction: row;
         -webkit-justify-content: flex-start;
         justify-content: flex-start;
-        -webkit-align-items: center;
-        align-items: center;
+        -webkit-align-items: flex-start;
+        align-items: flex-start;
 
         text-align: map_get($onlineUsersItem, textAlign);
         margin-bottom: map_get($onlineUsersItem, marginBottom) + px;
@@ -18,7 +21,28 @@
     }
 
     &__body {
-        padding: 10px 0;
+        padding: 0;
+    }
+
+    &__items {
+        padding: 10px 10px 10px 0;
+    }
+
+    &__controls {
+        position: absolute;
+        width: 100%;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        padding: 10px;
+        border-top: 2px solid #f2f2f2;
+        background-color: #fff;
+
+        textarea {
+            background-color: #f2f2f2;
+            border-radius: 2px;
+            resize: none;
+        }
     }
 
     &__profile-image {
@@ -33,10 +57,14 @@
         }
     }
 
-    &__username {
+    &__bubble {
         -webkit-flex: 4 0 0;
         flex: 4 0 0;
         text-align: left;
+        border-radius: 2px;
+        background-color: #f2f2f2;
+        border: solid 1px #e6e6e6;
+        padding: 5px 7px 9px 7px;
 
         font-size: map_get($onlineUsersItem, fontSize) + px;
         a {
