--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -17,7 +17,7 @@ $fa-font-path : "node_modules/font-awesome/fonts" !default;
 // Components
 @import "components/tile";
 @import "components/button";
-@import "components/user-activity";
+@import "components/activity";
 
 //Modules
 @import "modules/online-users";
