--- a/resources/assets/sass/components/activity.scss
+++ b/resources/assets/sass/components/activity.scss
@@ -1,4 +1,4 @@
-.User-activity {
+.Activity {
     &__heading {
         display: -webkit-flex;
         display: flex;
@@ -28,7 +28,7 @@
         flex: 9 0 0;
     }
 
-    &__username {
+    &__title {
         font-size: 14px;
         font-weight: 500;
         line-height: 1.21;
