--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -8,6 +8,7 @@ $salmon: #f3a69e;
 $sugar: #e6e6e6;
 $lightGrey: #e5e5e5;
 $earlGrey: #f3f3f3;
+$mildGrey: #999999;
 $white: #fff;
 $black: #333;
 $light-teal: #b6e9df;
