[develop] search autocomplete change

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,7 +10,7 @@
 $fa-font-path : "node_modules/font-awesome/fonts" !default;
 
 //Jquery UI
-@import "node_modules/jquery-ui-dist/jquery-ui";
+@import "node_modules/jquery-autocomplete/jquery.autocomplete";
 
 @import "scaffolding";
 @import "navbar";
