--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,7 +9,7 @@
 @import "node_modules/font-awesome/scss/font-awesome";
 $fa-font-path : "node_modules/font-awesome/fonts" !default;
 
-//Jquery UI
+//Jquery Autocomplete
 @import "node_modules/jquery-autocomplete/jquery.autocomplete";
 
 @import "scaffolding";
