[develop] Kss styles setup, docs added for all components and modules, webpack set to copy to public/styleguide

--- a/resources/assets/sass/components/activity.scss
+++ b/resources/assets/sass/components/activity.scss
@@ -1,3 +1,10 @@
+// Activity
+//
+// Markup: activity.hbs
+//
+// The component use to announce any kind or user-related or other activity on the news-feed
+//
+// Style guide: Components.Activity
 .Activity {
     &__heading {
         display: -webkit-flex;
