--- a/resources/assets/sass/components/tile.scss
+++ b/resources/assets/sass/components/tile.scss
@@ -1,3 +1,10 @@
+//  Tile
+//
+// Markup: tile.hbs
+//
+// The main layout component which all the modules and other components are based upon
+//
+// Style guide: Components.Tile
 .Tile {
     overflow: hidden;
 
