--- a/resources/assets/sass/modules/online-users.scss
+++ b/resources/assets/sass/modules/online-users.scss
@@ -1,3 +1,10 @@
+// Online Users
+//
+// Markup: online-users.hbs
+//
+// The Online Users module
+//
+// Style guide: Modules.Online Users
 .Online-users {
     &__item {
         display: -webkit-flex;
