--- a/resources/assets/sass/modules/shoutbox.scss
+++ b/resources/assets/sass/modules/shoutbox.scss
@@ -1,3 +1,10 @@
+// Shoutbox
+//
+// Markup: shoutbox.hbs
+//
+// The Shoutbox module
+//
+// Style guide: Modules.Shoutbox
 .Shoutbox {
     position: relative;
     height: $shoutboxHeight + px;
