--- a/resources/assets/sass/modules/user-account.scss
+++ b/resources/assets/sass/modules/user-account.scss
@@ -1,3 +1,10 @@
+// User Account
+//
+// Markup: user-account.hbs
+//
+// The User Account module
+//
+// Style guide: Modules.User Account
 .User-account {
     &__heading {
        padding: 0;
