--- a/resources/assets/sass/components/button.scss
+++ b/resources/assets/sass/components/button.scss
@@ -1,4 +1,19 @@
+// Button
+//
+// The buttons are built from the same base class.
+//
+// Markup: button.hbs
+//
+// .Button--default   - The default button
+// .Button--primary   - The primary button
+// .Button--success   - The success button
+// .Button--warning   - The warning button
+// .Button--info      - The info button
+// .Button--danger    - The danger button
+//
+// Style guide: Components.Button
 .Button {
+    display: inline-block;
     padding: 0px 13px;
     border-radius: map_get($button, border-radius) + px;
     border-width: map_get($button, border-width) + px;
