[develop] Kss styles done for current sass

--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -1,3 +1,11 @@
+// Brand Variables
+//
+// Markup: brand.hbs
+//
+// Brand Variables
+//
+// Style guide: Brand Variables
+
 // colors
 $slate: #4f5d75;
 $slateLight: #617493;
