--- a/resources/assets/sass/footer.scss
+++ b/resources/assets/sass/footer.scss
@@ -1,3 +1,10 @@
+// Footer
+//
+// Markup: footer.hbs
+//
+// The Footer
+//
+// Style guide: Layout.Footer
 .Footer {
     background-color: $footerBgColor;
     color: $white;
