--- a/resources/assets/sass/navbar.scss
+++ b/resources/assets/sass/navbar.scss
@@ -1,3 +1,10 @@
+// Navbar
+//
+// Markup: navbar.hbs
+//
+// The Navbar
+//
+// Style guide: Layout.Navbar
 .navbar-default {
     border: $navbarBorderWidth + px solid #d3e0e9;
     background-color: $navbarBgColor;
