--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -21,6 +21,7 @@ $fa-font-path : "node_modules/font-awesome/fonts" !default;
 @import "components/tile";
 @import "components/button";
 @import "components/activity";
+@import "components/alert";
 
 //Modules
 @import "modules/online-users";
