--- a/resources/assets/sass/variables.hbs
+++ b/resources/assets/sass/variables.hbs
@@ -1,10 +1,5 @@
-// Bootstrap Variables
-//
-// Markup: variables.hbs
-//
-// Bootstrap Variables
-//
-// Style guide: Bootstrap Variables
+<pre>
+//body
 $body-bg: #f5f8fa;
 
 // Borders
@@ -40,3 +35,4 @@ $input-color-placeholder: lighten($text-color, 30%);
 
 // Panels
 $panel-default-heading-bg: #fff;
+</pre>
