--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -22,6 +22,7 @@ $fa-font-path : "node_modules/font-awesome/fonts" !default;
 @import "components/button";
 @import "components/activity";
 @import "components/alert";
+@import "components/user-summary";
 
 //Modules
 @import "modules/online-users";
