[develop] search minor changes

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -28,3 +28,4 @@ $fa-font-path : "node_modules/font-awesome/fonts" !default;
 @import "modules/online-users";
 @import "modules/user-account";
 @import "modules/shoutbox";
+@import "modules/search";
