--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -232,3 +232,9 @@ $dangerButton: (
     'background-color__hover': $tomatoLight,
     'background-color__active': $tomato
 );
+
+// Search
+$searchItem: (
+    'font-size': 14,
+    'font-color': $slate
+);
