--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -23,6 +23,7 @@ $fa-font-path : "node_modules/font-awesome/fonts" !default;
 @import "components/activity";
 @import "components/alert";
 @import "components/user-summary";
+@import "components/user-profile";
 
 //Modules
 @import "modules/online-users";
