[develop] user profile changes

--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -238,3 +238,9 @@ $searchItem: (
     'font-size': 14,
     'font-color': $slate
 );
+
+// User-profile
+$userProfileItem: (
+    'icon-color': $slate,
+    'font-size': 14
+);
