--- a/resources/assets/sass/components/user-profile.scss
+++ b/resources/assets/sass/components/user-profile.scss
@@ -27,6 +27,12 @@
         }
     }
 
+    &__favorite-button {
+        button {
+            width: 100%;
+        }
+    }
+
     &__text {
         font-size: map_get($userProfileItem, font-size) + px;
     }
