--- a/resources/assets/sass/modules/shoutbox.scss
+++ b/resources/assets/sass/modules/shoutbox.scss
@@ -32,7 +32,7 @@
     }
 
     &__items {
-        padding: 10px 10px 0 0;
+        padding: 10px 10px 10px 0;
         height: 391px;
         overflow-y: scroll;
     }
