--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -24,6 +24,7 @@ $fa-font-path : "node_modules/font-awesome/fonts" !default;
 @import "components/alert";
 @import "components/user-summary";
 @import "components/user-profile";
+@import "components/private-chat-item";
 
 //Modules
 @import "modules/online-users";
