--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -1,8 +1,16 @@
+
+@mixin private-chat-list {
+    @for $i from 0 through 10 {
+        .PrivateChatItem--#{$i} { right: (100 + (map_get($privateChatItem, width) + 20) * $i) + px; }
+    }
+}
+
+@include private-chat-list;
+
 .PrivateChatItem {
     position: fixed;
-    right: 100px;
     bottom: 0;
-    width: 250px;
+    width: map_get($privateChatItem, width) + px;
 
     &__head {
         border-radius: 2px 2px 0 0;
@@ -65,6 +73,7 @@
         min-height: 10px;
         border-radius: 5px;
         margin-bottom: 10px;
+        word-break: break-all;
 
         &--user-a {
             background: #FDE4CE;
