[develop] chat window

--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -18,6 +18,7 @@ $lightGrey: #e5e5e5;
 $earlGrey: #f3f3f3;
 $mildGrey: #999999;
 $white: #fff;
+$darkWhite: #f7f7f7;
 $black: #333;
 $light-teal: #b6e9df;
 $topaz: #1abc9c;
