--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -49,14 +49,28 @@
         font-weight: bold;
     }
 
+    &__actionIcons {
+        display: flex;
+        margin-left: auto;
+        align-self: center;
+    }
+
+    &__minimize,
     &__clear {
         display: flex;
         cursor: pointer;
-        margin-left: auto;
 
-        .material-icon.clear {
-            align-self: center;
-            color: $white;
+        .material-icon {
+            &.minimize,
+            &.clear {
+                align-self: center;
+                color: $white;
+            }
+
+            &.minimize {
+                position: relative;
+                bottom: 2px;
+            }
         }
     }
 
@@ -136,5 +150,9 @@
             resize: none;
             overflow: hidden;
         }
+    }
+
+    &.focus {
+        box-shadow: 0 0 10px rgba(0,0,0,0.2);
     }
 }
