search functionality improvements and reworks

--- a/resources/assets/sass/components/user-profile.scss
+++ b/resources/assets/sass/components/user-profile.scss
@@ -20,7 +20,7 @@
         }
     }
 
-    &__user-image {
+    &__user-profile-image {
         margin-bottom: 10px;
         img {
             width: 100%;
