--- a/resources/assets/sass/brand.scss
+++ b/resources/assets/sass/brand.scss
@@ -254,3 +254,8 @@ $userProfileItem: (
 $privateChatItem: (
     'width': 250
 );
+
+$privateChatManager: (
+    'headBackGroundColor': $mainColor,
+    'headColor': $sugar
+);
