--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -20,6 +20,7 @@
 @import "components/alert";
 @import "components/user-summary";
 @import "components/user-profile";
+@import "components/private-chat-manager";
 @import "components/private-chat-item";
 
 //Modules
